deploy/route-el-java-app-event-listener.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-java-app-event-listener
  namespace: jroordinkbd-dev
  uid: 20015455-745a-4143-bb83-53eb47cb38de
  resourceVersion: '3431696206'
  creationTimestamp: '2023-11-22T13:57:59Z'
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: java-app-event-listener
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-11-22T13:57:59Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/managed-by': {}
            'f:app.kubernetes.io/part-of': {}
            'f:eventlistener': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-11-22T13:57:59Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: >-
    el-java-app-event-listener-jroordinkbd-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: el-java-app-event-listener
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        el-java-app-event-listener-jroordinkbd-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-11-22T13:57:59Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.sandbox-m2.ll9k.p1.openshiftapps.com
